# quangloc99.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.markdown  about.md  index.md  package.json  prettier.config.mjs
.vim/: coc-settings.json
.vitepress/: config.ts  theme-layout.vue  utils.ts
_includes/: collapsible.html  custom-head.html  customhighlight.html  image.html  mathjax.html  toc.html  utterances.html
_layouts/: custompost.html
_posts/: 2021-07-26-a-blog?-pog!.md  2021-07-26-welcome-to-jekyll.markdown  2021-07-30-my-CP-debugging-template.md  2021-10-01-im-red-now-what.md  2022-02-19-a-guide-to-test-generation-with-polygon-and-testlib.md  2022-02-19-test-generation-guide.md  2022-03-09-polygon-codeforces-tutorial.md  2022-03-26-writting-a-better-generator.md  2022-09-27-cp-gen-test.md  a-blog-pog.md
_posts/embed-contents/2022-02-19-test-generation-guide/: .gitignore  CMakeLists.txt  all-fragments.cpp  build-example  call-main-return-output.fragment.cpp  call-main.fragment.cpp  gen-pretest-with-func.cpp  gen-pretest.cpp  gen-totally-random.cpp  gen-v2-example1.sh  gen-v2-example2.sh  gen-v2.cpp  gen-v3.cpp  gen-v4.1-func.cpp  gen-v4.1.cpp  gen-v4.1.inc  gen-v4.cpp  plot-test.py  random-array-v5.fragment.cpp  random-array-v6.fragment.cpp  run-script.sh  solution.cpp
_posts/embed-contents/2022-02-19-test-generation-guide/example-scripts/: gen-totally-random-example.sh  gen-v2-example3.sh  gen-v3-examples.sh  gen-v3-test-both.sh  gen-v3-test-linear-b.sh  gen-v4-test-for-chaotic-yes-tests-error.sh  gen-v4-test-for-no-tests-extreme-padding-bias.sh
(+111 files in other folders)
